# UriKit

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  readme.md  unix-x64.bash  vcpkg.json  win-x64.ps1
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cc
docs/: disambiguations.md
docs/01-design/: 01-Transcription.md  02-Seperate-Identitfication-Interaction.md  03-Hierarchical-Identifiers.md
docs/02-characters/: 01-Characters.md  02-Percent-Encoding.md  03-Reserved-Characters.md  04-Unreserved-Characters.md  05-When-Encode-Decode.md  06-Identifying-Data.md
docs/03-syntax-components/: 01-syntax-components.md  02-scheme.md  04-path.md  05-query.md  06-fragment.md
examples/: CMakeLists.txt
examples/parsing/: CMakeLists.txt  amazon-co-uk.cc  main.cc
include/uri/: uri.h
lib/: CMakeLists.txt  uri.cpp  uri.h
src/: CMakeLists.txt  authority-parser.cc  decoder.cc  encoder.cc  fragment-parser.cc  gen.cc  ipv4.cc  ipv6.cc  octet.cc  parse-scheme.cc  parser-engine.cc  parser_engine.cc  path-parser.cc  query-parser.cc  scheme-parser.cc  segment-decoder.cc  sets.cc  str.cc  syntax_validator.cc  uri.cc  val-ipv4.cc  val-ipv6.cc  val-octet.cc  val-port.cc  val-scheme.cc
test/: CMakeLists.txt  run.cc
test/src/ipv4/: ipv4.cc
test/src/ipv6/: ipv6.cc
test/src/octet/: octet.cc
test/src/parser/: authority.cc  host.cc  info.cc  path.cc  port.cc  scheme.cc
test/src/parser_engine/: authority.cc  host.cc  info.cc  path.cc  port.cc  scheme.cc
test/src/static_parser_helpers/: authority.cc  host.cc  info.cc  path.cc  port.cc  scheme.cc
test/src/uri/: generator.cc  parser.cc  string_gen.cc
tests/: CMakeLists.txt
tests/src/: percent-decoder.cc  percent-encoder.cc  static-authority-parser.cc  static-path-parser.cc  static-scheme-parser.cc  uri-parse-authority.cc  uri-parse-path.cc  uri-parse-scheme.cpp  uri-parser.cc  validation-ipv6.cc  validation-octet.cc  validation-port.cc  validation-scheme.cc
tests/src/ipv4/: ipv4.cc  val-ipv4.cc
tests/src/ipv6/: ipv6.cc
tests/src/octet/: octet.cc
tests/src/parser/: authority.cc  host.cc  path.cc  scheme.cc
tests/src/uri/: generator.cc  parser.cc
uri/: CMakeLists.txt
uri/include/uri/: uri.h
uri/src/: character_sets.cc  character_sets.h  gen.cc  parser.cc  parser_engine.cc  parser_engine.h  syntax_validator.h  uri.cc
uri/src/characters/: character.cc  character.h
uri/src/extensions/: str.cc
uri/src/ipv4/: ipv4.cc  ipv4.h
uri/src/ipv6/: ipv6.cc  ipv6.h
uri/src/octet/: octet.cc  octet.h
uri/src/parser/: parser_engine.cc
uri/src/uri/: uri.cc
uri/src/validation/: syntax_validator.cc
(+39 files in other folders)
